--- a/style/fonts.css
+++ b/style/fonts.css
@@ -41,7 +41,7 @@
 }
 
 .fab{
-    font-family:'fontawesome-solid';
+    font-family:'fontawesome-brands';
     font-weight: 900;
     font-style: normal;
 }
