--- a/style/style.css
+++ b/style/style.css
@@ -115,8 +115,9 @@ margin-left: 143px;
 }
 .search{
     display: flex;
-    margin: 40px auto;
+    margin: 40px 0;
     align-items: center;
+    justify-content: space-between;
 
 }
 form{
@@ -234,7 +235,10 @@ form{
 .btn-outline-success:focus{
     box-shadow: none;
 }
+.header__nav-img::after{
+    content: url(../img/Logo.png);
 
+}
 
 /* header-end */
 
@@ -323,6 +327,7 @@ form{
     max-height: 200px;
     height: 100%;
     object-fit: contain;
+    filter: drop-shadow(0 0 0 var(--secondary-color));
 
 }
 
@@ -371,7 +376,7 @@ form{
 }
 .main__phones-card:hover{
     transform: translateY(30px);
-    border: solid #E5E5E5 2px;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
 .main__phones-card:hover .main__card-link{
     opacity: 1;
@@ -442,7 +447,191 @@ form{
     margin-bottom: 30px;
     margin-top: 150px;
 }
+.main__section-img::after{
+    content: url(../img/pa-title.png);
+}
 
 
 
 /* main-end */
+
+
+/*  footer-start*/
+
+.footer{
+    background: var(--primary-color);
+    padding: 30px 0 45px 0;
+    margin-top: 70px;
+}
+.footer__logo{
+    object-fit: contain;
+}
+.footer-link{
+    font-size: 18px;
+    line-height: 25px;
+    color: white;
+    font-family: var(--n);
+    margin-right: 30px;
+}
+.footer-link:hover{
+    color: white;
+}
+
+.footer__search-purpose{
+    font-size: 18px;
+    line-height: 25px;
+    font-family:  var(--n);
+    color: whitesmoke;
+    display: flex;
+    width: 100%;
+    justify-content: start;
+    margin-bottom: 5px;
+}
+.footer__center .search form .form__search{
+   margin: 0;
+}
+.footer-telegram::after{
+    content: '\f3fe';
+   
+}
+.footer-telegram, .footer-facebook, .footer-instagram{
+    font-size: 51px;
+    margin-right: 25px; 
+    color: white;
+    font-weight: 400;
+}
+.footer-icon:hover{
+    color: white;
+}
+
+.footer-facebook::after{
+    content: '\f09a';
+}
+.footer-instagram::after{
+    content: '\f16d';
+}
+.header__nav-btn:focus{
+    background: var(--primary-color);
+    box-shadow: none;
+
+}
+
+
+
+
+/* footer-end */
+
+
+
+/* second-page start */
+
+.main__iphone{
+    width: 80px;
+
+}
+.main__list-img{
+    width: 80px;
+    height: 100px;
+}
+.main__iphone-link.active{
+    background:  var(--secondary-color)!important;
+    padding: 0 !important;
+    box-shadow: 0 0 5px  #E5E5E5;
+    border-radius: 0;
+}
+.main__list-img:nth-of-type(1){
+    object-fit: contain;
+}
+.main__iphone-img{
+    display: block;
+    width: 409px;
+    height: 410px;
+    object-fit: contain;
+
+
+}
+.main__iphone{
+    margin-right: 30px;
+    
+}
+.main__iphone-content{
+    display: none !important;
+}
+.main__iphone-content.show.active{
+    display: flex !important;
+}
+
+.main__right-title{
+    font-size: 30px;
+    line-height: 30px;
+    font-family: var(--nb);
+    color: #000000;
+    letter-spacing: 0.05em;
+    width: 630px;
+    margin-bottom: 40px;
+}
+.main__right-cost{
+    color: #000000;
+    font-family: var(--nb);
+    font-weight: 500 !important;
+    font-size: 24px;
+    line-height: 70px;
+    margin-bottom: 20px;
+}
+.right__content-title{
+    font-size: 24px;
+    line-height: 24px;
+    font-family: var(--nb);
+    font-weight: 500 !important;
+    margin-bottom: 10px;
+}
+
+.right__content-item{
+    font-size: 14px;
+    line-height: 25px;
+    font-family: var(--n);
+    color: #000000;
+    list-style-type: disc!important;
+}
+.main-right a{
+    display: inline-block;
+    width: 190px;
+    text-align: center;
+    font-size: 20px;
+    font-family: var(--n);
+    font-weight: normal !important;
+    margin-right: 30px;
+
+}
+.main__right-icon::after{
+    content: '\f07a';
+     font-weight: 300;
+}
+.main__right-icon{
+    margin-right: 11px;
+   
+}
+.setion__content{
+    margin-top: 40px;
+}
+.section-title{
+    font-size: 48px;
+    line-height: 65px;
+    margin-bottom: 40px;
+    font-family: var(--nb);
+    align-self: flex-start;
+
+}
+.section-decription{
+    font-size: 24px;
+    line-height: 33px;
+    font-family: var(--n);
+    color: var(--primary-color);
+    width: 454px;
+    margin-bottom: 116px;
+}
+.setion__content{
+    top:20px;
+    right: 31px;
+}
+/*  second-page-end*/
